# subconverter

.github/workflows/: vless2clash-gist.yml
vless2clash/: .gitignore  README.md  pyproject.toml
vless2clash/src/vless2clash/: __init__.py  cli.py  converter.py  external_config.py  source.py  vless.py
vless2clash/src/vless2clash/resources/: clash_base.yml
vless2clash/tests/: test_cli.py  test_external_config.py  test_vless.py
